src/test/ui/issues/issue-51154.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-51154.rs:2:21
   |
LL |     let _: Box<F> = Box::new(|| ());
   |                     ^^^^^^^^^-----^
   |                              |
   |                              expected `F`
   |
help: provide an argument of the correct type
   |
LL |     let _: Box<F> = ({F});
   |                     ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
